# Systems_theory_and_systems_analysis

./: LICENSE.txt  MANIFEST.ini  README.md  ranking.py  setup.cfg
classes/: ranking.py
rank/: bordaranking.py  condorcetranking.py  ranking.py  utils.py
rank/input_data/: 3.txt  7.txt
