[metadata]
name = rank
version = 0.0.1
author = Yaroslav Cherkaev
author_email = yaroslav.cherkaev@yandex.ru
description = For ranking and correlation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yaroslavcherkaev/Systems_theory_and_systems_analysis
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True